<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="?preferenceHeader"
        android:text="@string/purchase_service_details_header_pithy" />

    <TextView
        style="?preferenceSummary"
        android:text="@string/purchase_service_details_summary_upsert" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/screen_edge">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/purchase_service_details_summary_upsert"
            android:src="@drawable/screenshot_upsert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.618" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="?preferenceSummary"
        android:text="@string/purchase_service_details_summary_prune_records" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/screen_edge">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/purchase_service_details_summary_prune_records"
            android:src="@drawable/screenshot_prune_records"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.618" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
